Update build tools

--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
   },
   "homepage": "https://github.com/Andarist/callbag-ms-elapsed#readme",
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.54",
-    "@babel/preset-env": "7.0.0-beta.54",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
-    "babel-plugin-annotate-pure-calls": "^0.3.0",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.13.7",
     "rimraf": "^2.6.2",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "4.0.0-beta.7"
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3"
   },
   "dependencies": {
     "callbag-animation-frames": "^2.0.0",
