--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "callbag-animation-frames": "^2.0.0",
     "callbag-flatten": "^1.2.0",
     "callbag-lazy": "^1.0.2",
-    "callbag-map": "^1.0.1",
-    "callbag-share": "^1.1.1"
+    "callbag-map": "^1.0.1"
   }
 }
