--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "callbag-ms-elapsed",
   "version": "1.0.2",
   "description": "👜 Callbag listenable source which emits milliseconds elapsed since the subscription (using requestAnimationFrame) - useful for animations.",
-  "main": "dist/callbag-ms-elapsed.js",
-  "module": "dist/callbag-ms-elapsed.esm.js",
+  "main": "./dist/callbag-ms-elapsed.cjs.js",
+  "module": "./dist/callbag-ms-elapsed.esm.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "precommit": "lint-staged",
     "prebuild": "rimraf dist",
     "build": "rollup -c",
     "prepare": "npm run build"
@@ -28,23 +27,22 @@
   },
   "homepage": "https://github.com/Andarist/callbag-ms-elapsed#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^22.4.3",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.13.7",
+    "husky": "^1.1.3",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
+    "rollup": "^0.67.0",
     "rollup-plugin-babel": "^4.0.3"
   },
   "dependencies": {
     "callbag-animation-frames": "^2.0.0",
-    "callbag-flatten": "^1.2.0",
-    "callbag-lazy": "^1.0.2",
+    "callbag-defer": "^1.0.0",
     "callbag-map": "^1.0.1"
   }
 }
