--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "./dist/callbag-ms-elapsed.cjs.js",
   "module": "./dist/callbag-ms-elapsed.esm.js",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "rollup -c",
+    "prebuild": "rimraf dist types",
+    "build": "rollup -c && tsc",
     "prepare": "npm run build"
   },
   "repository": {
@@ -30,18 +31,23 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.1.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "babel-plugin-macros": "^2.5.0",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.3",
+    "pipeline.macro": "^1.1.0",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "typescript": "^3.3.3"
   },
   "dependencies": {
+    "callbag": "^1.2.0",
     "callbag-animation-frames": "^2.1.0",
-    "callbag-defer": "^1.0.0",
+    "callbag-defer": "^1.1.0",
     "callbag-map": "^1.1.0"
   }
 }
