--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "👜 Callbag listenable source which emits milliseconds elapsed since the subscription (using requestAnimationFrame) - useful for animations.",
   "main": "./dist/callbag-ms-elapsed.cjs.js",
   "module": "./dist/callbag-ms-elapsed.esm.js",
+  "types": "./types/index.d.ts",
   "files": [
     "dist",
     "types"
